# fermi

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  RUNNER.sh  data.txt  format_code.sh  makefile
.github/workflows/: ci.yml  cmake-single-platform.yml
doc/fermi-man/: chapter0.tex  chapter1.tex  chapter2.tex  chapter3.tex  fermi-man.tex
doc/fermi-man/images/: coupling.eps
doc/highlight-kate/: fermi.xml
examples/atucha2/: canal.geo  canal.geo.m4  canal1.geo  channel_name.sh  extract_surface.py  gen_channels.sh  gen_grid.py  gen_mat.py  reactor-4.geo  reflector.geo  surface_ID.sh
examples/cube/: cube.fer  cube.fermi  cube.geo  cube.toml
examples/fuel_couple/: control.c  debug_coupling.sh  fuel.fermi  fuel.geo  fuel_1.fer  fuel_1.geo  fuel_2.fer  fuel_2.geo  fuel_3.fer  fuel_3.geo  fuel_4.fer  fuel_4.geo  fuel_5.fer  makefile
examples/iaea/: control.c  debug_coupling.sh  gen_mesh.sh  iaea_0.fer  iaea_1.fer  iaea_2.fer  iaea_coup.fer
examples/sphere/: critical.sh  gmsh.out  sphere.fermi  sphere.fermi.m4  sphere.geo  sphere.geo.m4  sphere.out
headers/: fem.h  funct.h  globals1.h  gmsh.h  list.h  mesh.h  types.h  types1.h  utils.h
inc/: fermi.h  fun.h  global.h  gmsh.h  types.h
include/: assert.h  fem.h  fermi.h  fermi.hpp  fun.h  global.h  globals1.h  gmsh.h  list.h  matlaw.h  mesh.h  parser.hpp  toml.h  types.h  utils.h  utils.hpp
lib/PLEPP/: Makefile.plepp  Makefile.plepp.ORIG  PLEPP.sh  PYPLEPP.sh  RUNNER.sh  notas.txt
lib/PLEPP/LIBPLE/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool  ple-config  ple_config.h  ple_config_priv.h  ple_config_priv.h.in  stamp-h1
lib/PLEPP/LIBPLE/Alya4cplng/: Makefile
lib/PLEPP/LIBPLE/autom4te.cache/: output.0  traces.0
lib/PLEPP/LIBPLE/doc/: Makefile  Makefile.in
lib/PLEPP/LIBPLE/src/: Makefile  Makefile.in  ple_locator.c  ple_locator.h
lib/PLEPP/LIBPLE/tests/: Makefile  Makefile.in
lib/PLEPP/LIBPLEPP/: Makefile.in
lib/PLEPP/LIBPLEPP/Docs/: Doxyfile  Makefile  main.dox
lib/PLEPP/LIBPLEPP/Include/: build_octree.c  build_octree.c_2016Mar22  build_octree.h  commdom.cpp  commdom.hpp  commdom_V2.0.cpp  commdom_V2.0.hpp  commdom_saturne.cpp  commdom_saturne.hpp  cs_alya.c  cs_alya.h  loader_alya.cpp  loader_alya.hpp  others.h  outside_ple.h  read_file.hpp
octave/: grad_shape_3_4.m  grad_shape_3_8.m  integral.m  shape_3_4.m  test_elem.m
scripts/: plot3d.gnuplot
src/: algebra.cc  algebra.h  algebra_test.cc  assembly.c  assembly.cpp  assembly.h  assert.c  boundary.cpp  element.h  elemental.c  elemental.c.old  ellpack.cc  ellpack.h  ellpack_test.cc  fem.c  fem.cpp  fem.h  fer_assm.c  fer_boun.c  fer_couple.c  fer_elem.c  fer_finish.c  fer_init.c  fer_main.c  fer_output.c  fer_parser.c  fer_powe.c  fer_power.c  fer_rods.c  fer_solv.c  fer_step.c  ferassm.c  ferboun.c  ferelem.c  ferfini.c  ferinit.c  fermi.hpp  fermi_dt.cpp  fermi_keff.cpp  ferpowe.c  (+46 more)
src/main/: main_keff.cc  main_keff_1d_segment2.cc  main_keff_2d_quad.cc  main_keff_2d_quad4.cc  main_keff_2d_tria3.cc  main_keff_3d_hexa.cc  main_segment2.cc  main_transient.cc
src/old/: assembly.cpp  assert.cpp  boundary.cpp  elemental.cpp  fem.cpp  finish.cpp  gmsh.cpp  init.cpp  list.cpp  lst2msh.cpp  main_transient.cc  mesh.cpp  output.cpp  parser.cpp  parser.hpp  power.cpp  solve.cpp  test_parser.cpp  utils.cpp  utils.hpp
utils/: tmpi
(+145 files in other folders)
